2022-01-11  Markus Gans  <guru.mail@muenster.de>
	* Generalize the passing of the resize event to its parent dialog

2022-01-09  Markus Gans  <guru.mail@muenster.de>
	* Added a ring buffer to buffer unprocessed keyboard and mouse input
	* Added a unit test for the FVTerm class
	* The current mouse event is now cached in a shared_ptr

2022-01-05  Markus Gans  <guru.mail@muenster.de>
	* Sharing keyboard buffer length in FKeyboard and FMouse

2022-01-02  Markus Gans  <guru.mail@muenster.de>
	* Speed up UTF-8 input parsing

2022-01-02  Markus Gans  <guru.mail@muenster.de>
	* FTermArea now checks if there is a given terminal position 
	  in its area

2021-12-30  Markus Gans  <guru.mail@muenster.de>
	* Resetting the terminal state on resizing

2021-12-27  Markus Gans  <guru.mail@muenster.de>
	* The number of cycles has been reduced to save CPU time

2021-12-18  Markus Gans  <guru.mail@muenster.de>
	* Move the border label methods from FButtonGroup to FScrollView

2021-12-13  Markus Gans  <guru.mail@muenster.de>
	* Faster string comparison between FString, char* std::string, 
	  wchar_t and std:wstring

2021-12-11  Markus Gans  <guru.mail@muenster.de>
	* Correct mouse event after moving a window

2021-11-16  Markus Gans  <guru.mail@muenster.de>
	* A new example demonstrates parallax scrolling with multi-layered 
	  stars

2021-11-11  Markus Gans  <guru.mail@muenster.de>
	* You can now use the constructor of the FVTerm class to specify 
	  an alternative terminal output class that must be derived from 
	  FOutput

2021-11-06  Markus Gans  <guru.mail@muenster.de>
	* Using the STL algorithms for the input fifo_buf

2021-11-01  Markus Gans  <guru.mail@muenster.de>
	* Switched to the language standard C++14

2021-10-31  Markus Gans  <guru.mail@muenster.de>
	* Version 0.8.0

2021-10-28  Markus Gans  <guru.mail@muenster.de>
	* The keyboard and timer examples now have flicker-free scrolling

2021-10-24  Markus Gans  <guru.mail@muenster.de>