@@ -60,7 +60,7 @@ std::size_t   getHotkeyPos (const FString& src, FString& dest);
 void          setHotkeyViaString (FWidget*, const FString&);
 void          setWidgetFocus (FWidget*);
 bool          setWidgetShadow (FWidget*, bool);
-void          passResizeCornerEventToDialog (FWidget*, const FMouseEvent&);
+void          passResizeCornerEventToDialog (const FWidget*, const FMouseEvent&);
 void          drawShadow (FWidget*);
 void          drawTransparentShadow (FWidget*);
 void          drawBlockShadow (FWidget*);
